[package]
authors = [
  "Justin Kilpatrick <justin@althea.net>",
  "Christian Borst <christian@althea.systems>",
  "Greg Szabo <greg@informal.systems>",
  "Tony Arcieri <tony@iqlusion.io>",
  "Phuong Tran <tranphuong.080@gmail.com>",
]
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
description = "Protobuf stuct defintions for interacting with Cosmos SDK powered blockchains"
edition = "2021"
keywords = ["blockchain", "cosmos", "proto"]
license = "Apache-2.0"
name = "cosmos-sdk-proto-titan"
readme = "README.md"
repository = "https://github.com/titantkx/titan-rust-proto/tree/develop/cosmos_sdk_proto"
rust-version = "1.56"
version = "0.18.0"

[dependencies]
prost = {workspace = true}
prost-types = {workspace = true}

# Optional dependencies
tonic = {workspace = true, optional = true}

[features]
default = []
grpc = ["tonic"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
